Scope graph id factory to transaction level to control mem usage. Make sure nptg data only loaded for defined bounds